# BattleCity-Tested-Framework

./: .gitignore  BattleCity.sln  CMakeLists.txt  LICENSE  README.md
src/BattleCity.Engine/include/agents/: ScriptedEnemyAgent.h
src/BattleCity.Engine/include/core/: Action.h  CheatManager.h  GameState.h
src/BattleCity.Engine/include/entities/: Base.h  Bullet.h  Tank.h  Wall.h
src/BattleCity.Engine/include/map/: Level1.cpp  Level2.cpp  Level3.cpp  Level4.cpp  Level5.cpp
src/BattleCity.Engine/include/utils/: Utils.h
src/BattleCity.Engine/simulator/: Runner.cpp  Runner.h
src/BattleCity.Engine/src/agents/: PathFinder.cpp  ScriptedEnemyAgent.cpp
src/BattleCity.Engine/src/core/: CheatManager.cpp  GameState.cpp
src/BattleCity.Engine/src/entities/: Base.cpp  Bullet.cpp  Tank.cpp  Wall.cpp
src/BattleCity.Engine/src/utils/: utils.cpp
src/BattleCity.GUI/src/: InputMap.cpp  InputMap.h  Render2D.cpp  Render2D.h  main.cpp
src/BattleCity.Headless/: main.cpp
src/BattleCity.Orchestrator/: BattleCity.Orchestrator.csproj  Program.cs
src/BattleCity.Orchestrator/Analysis/: ReportExporter.cs  StatsAggregator.cs
src/BattleCity.Orchestrator/Cheats/: CheatScriptBuilder.cs
src/BattleCity.Orchestrator/Core/: MatchProcess.cs  MatchResult.cs  TestRunner.cs
src/BattleCity.Orchestrator/include/: IAgent.h  PathFinder.h  ScriptedEnemyAgent.h
src/BattleCity.Orchestrator/src/: PathFinder.cpp  ScriptedEnemyAgent.cpp
